--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Página não encontrada</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>Eitaa!</h1>
+				<h2>404 - Se perdeu amigão? essa página está indisponível</h2>
+			</div>
+			<a href="#">Ajuda via Discord</a>
+		</div>
+	</div>
 
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="description" content="Come on, shake your body baby."><meta name="keywords" content="murilo renner, mrdev, konga, conga, shake your body"><meta name="twitter:site" content="@murilorenner_"><meta name="twitter:creator" content="@murilorenner_"><link rel="stylesheet" href="reset.css"><link rel="stylesheet" href="style.css"><title>?</title></head><body> <script src="workspace.js"></script> <audio controls preload="" loop> <source src="konga.mp3" type="audio/mp3"> <embed src="konga.mp3" loop> </audio> </body>
-
+</body>
 </html>
