--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 				<h1>Eitaa!</h1>
 				<h2>404 - Se perdeu amigão? essa página está indisponível</h2>
 			</div>
-			<a href="#">Ajuda via Discord</a>
+			<a href="https://dsc.gg/convergencegif">Ajuda via Discord</a>
 		</div>
 	</div>
-
 </body>
 </html>
