--- a/termos/inicio.html
+++ b/termos/inicio.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Bio - Roycy</title>
-        <link rel="icon" href="src/img/Logo1.png">
+        <title>Todos os termos Convergence</title>
+        <link rel="icon" href="src/img/cm.png">
 
         <link rel="stylesheet" href="src/css/style1.css"/>
         <script src="src/javascript/index.js"></script>
